--- a/web/index.html
+++ b/web/index.html
@@ -5,15 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' type='text/css' href='css/login.css'>
+    <link rel='stylesheet' type='text/css' href='css/comun.css'>
     <title>Document</title>
 </head>
 
 <body>
-
-
-
+    <div id='CuadradoLogin'>
+        <form id= 'FormularioLogin'><!--Login-->
+            <label for='user'>User</label>
+            <input id='user' type='text' placeholder='Escriba su usuario' /> 
+            <br/>
+            <label for='password'>Password</label>
+            <input id='password' type='password' placeholder='Escriba su contraseña' />
+            <input type='checkbox' id='showPassword'>
+            <br/>
+            <input type='submit' value='Enviar'/>
+        </form>
+    </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
 </body>
-
 </html>
