--- a/web/editarDatos.html
+++ b/web/editarDatos.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet"> 
     <title>KalmiHoot</title>
+    <div id='titulo' ><img src='source/image/Kalmihoot.png'></div>
     <link rel='stylesheet' type='text/css' href='css/comun2.css'>
     <link rel='stylesheet' type='text/css' href='css/panelUsuario.css'>
-
 </head>
 <body>
   <div id = "encabezado">
