--- a/web/index.html
+++ b/web/index.html
@@ -7,23 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' href='css/login.css'>
     <link rel='stylesheet' type='text/css' href='css/comun.css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <title>Document</title>
 </head>
 
 <body>
     <div id='CuadradoLogin'>
-        <form id= 'FormularioLogin'><!--Login-->
+        <form id='FormularioLogin'>
+
+
+
             <label for='user'>User</label>
-            <input id='user' type='text' placeholder='Escriba su usuario' /> 
-            <br/>
+            <br />
+            <input id='user' type='text' placeholder='Enter User' />
+            <br />
             <label for='password'>Password</label>
-            <input id='password' type='password' placeholder='Escriba su contraseña' />
-            <input type='checkbox' id='showPassword'>
-            <br/>
-            <input type='submit' value='Enviar'/>
+            <br />
+
+            <div>
+                <input type='password' class='form-control' id='password' placeholer='Enter Paswword'>
+                <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password" id='eye'></span>
+            </div>
+
+            <input type='submit' value='Enviar' id='Enviar' />
         </form>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
