--- a/web/index.html
+++ b/web/index.html
@@ -14,22 +14,21 @@
 <body>
     <div id='CuadradoLogin'>
         <form id='FormularioLogin'>
-
-
-
             <label for='user'>User</label>
             <br />
             <input id='user' type='text' placeholder='Enter User' />
             <br />
             <label for='password'>Password</label>
             <br />
-
             <div>
                 <input type='password' class='form-control' id='password' placeholer='Enter Paswword'>
                 <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password" id='eye'></span>
             </div>
-
             <input type='submit' value='Enviar' id='Enviar' />
+            <br />
+            <div id="mensajeError">
+                <p>Mensaje Error</p>
+            </div>
         </form>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
