--- a/web/index2.html
+++ b/web/index2.html
@@ -8,16 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet"> 
     <title>KalmiHoot</title>
+    <div id='titulo'><img src='source/image/Kalmihoot.png'></div>
     <link rel='stylesheet' type='text/css' href='css/comun2.css'>
     <link rel='stylesheet' type='text/css' href='css/panelUsuario.css'>
 
 </head>
 <body>
-  <div id = "encabezado">
-
-    <h1 id='tituloWeb'>KalmiHoot</h1>
-
-  </div>
     <div id="menuHamburguesa">
 
       <input type="checkbox" />
@@ -74,7 +70,7 @@
 
 
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/index2.js"></script>
+    <script src="js/comun.js"></script>
 </body>
 
 </html>
