--- a/web/index.html
+++ b/web/index.html
@@ -21,8 +21,8 @@
             <label for='password'>Password</label>
             <br />
             <div>
-                <input type='password' class='form-control' id='password' placeholer='Enter Paswword'>
-                <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password" id='eye'></span>
+                <input type='password' maxlength='25' class='form-control' id='password' placeholer='Enter Paswword'>
+                <span toggle='#password-field' class='fa fa-fw fa-eye field-icon toggle-password' id='eye'></span>
             </div>
             <input type='submit' value='Enviar' id='Enviar' />
             <br />
